# llm-chat-app-server

./: .gitignore  README.md  cspell.json  docker-compose.yaml
api/: .env.sample  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 24b602a2b395_create_tables.py  36c334e1a8dc_create_initial_table.py  3eeb9c1903da_add_default_timestamps_to_chat_rooms.py
api/src/: README.md  config.py  constants.py  db.py  main.py  middleware.py
api/src/clients/: README.md  chroma_client.py  openai_client.py
api/src/configs/: README.md  config.py  env.py
api/src/databases/: README.md  db.py
api/src/databases/relational/: README.md  postgresql.py
api/src/databases/vector/: README.md  chroma.py
api/src/middlewares/: README.md  cors.py  middleware.py
api/src/models/: README.md  chat_history.py  chat_message.py  chat_room.py  chat_thread.py  role.py
api/src/repositories/: README.md  chat.py  chat_history.py  chat_message.py  chat_room.py  chat_thread.py  query_chroma.py  save_chroma.py
api/src/routers/: README.md  chat.py  rag.py  threads.py
api/src/schemes/: README.md  chat.py  rag.py
api/src/seeders/: README.md  role.py
api/src/services/: chroma_service.py  openai_service.py
api/src/usecases/: README.md
api/src/usecases/chat_gpt/: chat.py  fetch_and_format_chat_messages.py  generate_chat_response.py  sample.py  sse.py  streaming_chat_responses.py
api/src/usecases/chat_history/: save.py
api/src/usecases/chat_message/: save.py  save_chat_message.py
api/src/usecases/chat_thread/: delete_all_chat_threads.py  delete_chat_thread.py  read.py  (+3 more)
(+11 files in other folders)
