[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "langchain>=0.3.3",
    "langchain-openai>=0.2.2",
    "openai>=1.51.2",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
